# UgExamples

./: .gitignore  README.md
IntervalTimer/: Package.swift  build.yaml
Kyle1/: .project  CMakeLists.txt  Kyle1.build  Package.swift  build.yaml  readme.1st
Kyle1/src/: ProgrammticUIHelper.swift  main.page  main.page.swift  start.swift
PinAuthScadeApp/: Package.swift  README.md  build.yaml
PinAuthScadeApp-master/: README.md
SimplyE/: Package.resolved  Package.swift  build.yaml
UgAlamofireExample/: Package.swift  build.yaml
UgAnimationDemo/: .project  UgAnimationDemo.build  build.yaml
UgAnimationDemo/src/: Basic.page  Basic.page.swift  GraphPage.page  Loaders1.page  TextboxAnimated.page  TextboxAnimated.page.swift  main.page  main.page.swift  start.swift
UgAppInAppDemo/: .project  Package.swift  build.yaml
UgAppInAppDemo/src/: WeatherClient.swift  main.page  main.page.swift
UgAsyncExample/: Package.swift  build.yaml
UgAsyncHttpClientExample/: Package.resolved  Package.swift  build.yaml
UgAsyncURLSessionExample/: Package.swift  build.yaml
UgBinaryTargetExample/: Package.swift  build.yaml
UgBinaryTargetExample/SPMSubproject/: Package.swift
UgBitmapDemo/: .project  UgBitmapDemo.build  build.yaml
UgBitmapDemo/src/: BindingAndScalePage.page  BindingAndScalePage.page.swift  main.page  main.page.swift  start.swift
UgBitmapDemo2/: Package.swift  build.yaml
UgCalculator/: .project  Package.resolved  Package.swift  UgCalculator.build  build.yaml
UgCalculator/src/: main.page  main.page.swift
UgCameraDemo/: .project  Package.swift  UgCameraDemo.build  build.yaml
UgCameraDemo/src/: main.page  main.page.swift  start.swift
UgCryptoSwift/: .project  CMakeLists.txt  Package.resolved  Package.swift  UgCryptoSwift.build  build.yaml
UgCryptoSwift/src/: main.page  start.swift
UgCustomBuildFilesExample/: AndroidManifest.xml  Package.swift  build.gradle  build.yaml  gradle.properties
UgGestureDemo/: .project  CMakeLists.txt  Package.swift  UgGestureDemo.build  build.yaml
UgGestureDemo/src/: main.page  main.page.swift  start.swift
UgLayoutControlDemo/: .project  UgLayoutControlDemo.build  build.yaml
UgLayoutControlDemo/src/: main.page  main.page.swift  start.swift
UgListControlDemo/: .project  UgListControlDemo.build  build.yaml
UgListControlDemo/src/: Dog.swift  DogView.swift  groupedByBreed.page  groupedByBreed.page.swift  main.page  main.page.swift  start.swift
UgListControlDemo2/: Package.resolved  Package.swift  build.yaml
UgLogging/: .project  CMakeLists.txt  Package.swift  UgLogging.build  build.yaml
UgLogging/src/: main.page  start.swift
UgMapControl/: .project  Package.swift  UgMapControl.build  build.yaml
UgMapControl/src/: main.page  main.page.swift  start.swift
UgMasterPageDemo/: .project  Package.swift  UgMasterPageDemo.build  build.yaml
UgMasterPageDemo/src/: main.page  main.page.swift  page1.page  page2.page  page3.page  start.swift
UgModalDialogDemo/: .project  Package.resolved  Package.swift  build.yaml
UgModalDialogDemo/src/: ModalContentPage.page  main.page  main.page.swift  start.swift
UgPagesDemo/: .project  UgPagesDemo.build  build.yaml
UgPagesDemo/src/: main.page  main.page.swift  start.swift
UgProgrammaticUIDev/: .project  CMakeLists.txt  Package.swift  UgProgrammaticUIDev.build  build.yaml
UgProgrammaticUIDev/src/: DynamicButtonGrid.page  DynamicButtonGrid.page.swift  FormEntryPage.page  FormEntryPage.page.swift  HelloWorld.page  HelloWorld.page.swift  ListControl.page.swift  main.page  start.swift
UgSQLiteSwift/: Package.resolved  Package.swift
UgSidebarControlDemo/: .project  UgSidebarControlDemo.build  build.yaml
UgSidebarControlDemo/src/: main.page  main.page.swift  start.swift
UgSlider/: Package.swift  build.yaml
UgSliderControlDemo/: .project  Package.swift  UgSliderControlDemo.build  build.yaml
UgSliderControlDemo/src/: main.page  main.page.swift  start.swift
UgSliderControlDemo2/: build.yaml
UgSqlLiteSwift/: .project  CMakeLists.txt  Package.swift  UgSqlLiteSwift.build  build.yaml
UgSqlLiteSwift/src/: main.page  main.page.swift  start.swift
UgSwiftFoundationDemo/: .project  CMakeLists.txt  UgSwiftFoundationDemo.build  build.yaml
UgSwiftFoundationDemo/src/: DateDemo.swift  HttpClientSample.swift  TestResult.swift  main.page  start.swift  (+1 more)
UgSwiftFoundationDemo/src/TestFoundation/: CMakeLists.txt  HTTPServer.swift  Launcher.cpp  TestAffineTransform.swift  TestBundle.swift  TestByteCountFormatter.swift  TestCalendar.swift  TestCharacterSet.swift  TestCodable.swift  TestDate.swift  TestDateFormatter.swift  TestDecimal.swift  TestEnergyFormatter.swift  TestFileHandle.swift  TestFileManager.swift  TestHTTPCookie.swift  TestHTTPCookieStorage.swift  TestISO8601DateFormatter.swift  TestIndexPath.swift  TestIndexSet.swift  TestJSONEncoder.swift  TestJSONSerialization.swift  TestLengthFormatter.swift  TestMassFormatter.swift  TestNSArray.swift  TestNSAttributedString.swift  TestNSByteCountFormatter.swift  TestNSCache.swift  TestNSCompoundPredicate.swift  TestNSData.swift  TestNSDictionary.swift  TestNSError.swift  TestNSGeometry.swift  TestNSIndexPath.swift  TestNSIndexSet.swift  TestNSJSONSerialization.swift  TestNSKeyedArchiver.swift  TestNSKeyedUnarchiver.swift  TestNSLocale.swift  TestNSNull.swift  (+44 more)
UgSwiftFoundationDemo/src/TestFoundation/Android/: CMakeLists.txt  org_swift_testfoundation_MainActivity.cpp  org_swift_testfoundation_MainActivity.h
UgSwiftFoundationDemo/src/TestFoundation/Android/src/org/swift/testfoundation/: Application.java  MainActivity.java
UgSwiftFoundationDemo2/: Package.swift  build.yaml
UgSwiftNioExample/: Package.swift  build.yaml
UgSwissClockDemo/: .project  Package.swift  UgSwissClockDemo.build  build.yaml
UgSystemDemo/: .project  UgSystemDemo.build  build.yaml  read.me
UgTextLabelDemo/: .project  Package.swift  UgTextLabelDemo.build  build.yaml
UgTilesMenuDemo/: .project  UgTilesMenuDemo.build  build.yaml
UgTilesMenuDemo2/: Package.swift  build.yaml
UgWebViewControl/: Package.swift  build.yaml
WorkoutApp/: Package.swift  build.yaml
(+361 files in other folders)
